# dioxus-nox

./: .gitignore  ARCHITECTURE-REVIEW.md  CLAUDE.md  Cargo.toml  LICENSE  NOX_EXTRACTION_OPPORTUNITIES.md.txt  NOX_EXTRACTION_PLAN.md  README.md  WORKLOG-INLINE-MARKDOWN-EDITOR.md
crates/calendar/: Cargo.toml
crates/calendar/examples/calendar-showcase/: Cargo.toml
crates/calendar/examples/calendar-showcase/src/: calendar_demos.rs  css.rs  (+3 more)
crates/calendar/src/: components.rs  context.rs  lib.rs  math.rs  tests.rs  types.rs
crates/cmdk/: CLAUDE.md  Cargo.toml
crates/cmdk/examples/command_palette/: Cargo.toml
crates/cmdk/examples/command_palette_adaptive/: Cargo.toml
crates/cmdk/examples/command_palette_floating/: Cargo.toml
crates/cmdk/examples/command_palette_mobile/: Cargo.toml
crates/cmdk/examples/command_palette_pages/: Cargo.toml
crates/cmdk/src/: components.rs  context.rs  helpers.rs  hook.rs  lib.rs  navigation.rs  placement.rs  scoring.rs  shortcut.rs  tests.rs  types.rs
crates/collection/: Cargo.toml
crates/collection/src/: lib.rs  navigation.rs  scoring.rs  tests.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  scroll_lock.rs  tests.rs
crates/cycle/: Cargo.toml  README.md
crates/cycle/src/: hook.rs  lib.rs  tests.rs  types.rs
crates/datagrid/: Cargo.toml
crates/datagrid/src/: components.rs  context.rs  editing.rs  lib.rs  navigation.rs  tests.rs  types.rs
crates/date-picker/: Cargo.toml
crates/date-picker/src/: date_field_components.rs  date_picker_components.rs  date_range_picker_components.rs  lib.rs  presets.rs  segment.rs  tests.rs
crates/dioxus-nox/: Cargo.toml
crates/dioxus-nox/src/: lib.rs
crates/dnd/: CLAUDE.md  Cargo.toml  input.css
crates/dnd/assets/: tailwind.css
crates/dnd/examples/: allow_deny.rs  drag_type_filter.rs  horizontal_pills.rs  kanban.rs  multi_list.rs  todo_list.rs  workout_tracker.rs  workout_tracker_requirements.md  workout_tracker_tailwind.rs
crates/dnd/src/: context.rs  grouped-feedback.css  grouped-functional.css  grouped-theme.css  lib.rs  sortable_projection.rs  styles-feedback.css  styles-functional.css  styles-theme.css  types.rs  utils.rs
crates/dnd/src/collision/: closest.rs  mod.rs  pointer.rs  sortable.rs
crates/dnd/src/context/: auto_scroll.rs  keyboard.rs  mod.rs  pointer.rs  provider.rs
crates/dnd/src/patterns/: grouped.rs  mod.rs
crates/dnd/src/primitives/: draggable.rs  dropzone.rs  mod.rs  overlay.rs
crates/drawer/: Cargo.toml  README.md
crates/drawer/src/: components.rs  lib.rs  tests.rs  types.rs
crates/extensions/: CLAUDE.md  Cargo.toml
crates/extensions/src/: context.rs  hook.rs  lib.rs  tests.rs  types.rs
crates/gestures/: CLAUDE.md  Cargo.toml
crates/gestures/src/: components.rs  lib.rs  long_press.rs  math.rs  swipe.rs  tests.rs  types.rs
crates/inline-confirm/: Cargo.toml  README.md
crates/inline-confirm/src/: components.rs  hook.rs  lib.rs  tests.rs  types.rs
crates/internal/: Cargo.toml
crates/internal/src/: focus_trap.rs  inert.rs  lib.rs  tests.rs
crates/markdown/: CLAUDE.md  Cargo.toml  IMPLEMENTATION-PLAN-STATUS.md  OBSIDIAN-LIVE-PREVIEW-RULES.md  antigravity-Seamless-Editor-Tech-Spec
crates/markdown/src/: components.rs  context.rs  highlight.rs  hooks.rs  inline_editor.rs  inline_tokens.rs  interop.rs  lib.rs  parser.rs  reveal_engine.rs  tests.rs  types.rs  viewport.rs
crates/master-detail/: Cargo.toml  README.md
crates/master-detail/src/: components.rs  lib.rs  tests.rs  types.rs
crates/modal/: Cargo.toml  README.md
crates/modal/src/: components.rs  hook.rs  lib.rs  tests.rs  types.rs
crates/noxpad/: CLAUDE.md  Cargo.toml
crates/noxpad/playwright/: README.md  package-lock.json  playwright.config.mjs
crates/noxpad/playwright-py/: README.md  test_inline_editor.py  test_keyboard_drag.py
crates/noxpad/playwright/tests/: noxpad.spec.ts
crates/noxpad/src/: css.rs  editor.rs  main.rs  models.rs  noxpad.css  palette.rs  panels.rs  sidebar.rs  utils.rs
crates/password-strength/: Cargo.toml  README.md
crates/password-strength/src/: assess.rs  hook.rs  lib.rs  tests.rs  types.rs
crates/preview/: CLAUDE.md  Cargo.toml
crates/preview/src/: cache.rs  components.rs  debounce.rs  lib.rs  position.rs  tests.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: components.rs  layout.rs  lib.rs  navigation.rs  tests.rs  types.rs
crates/select/: Cargo.toml  DESIGN.md  RESEARCH.md
crates/select/src/: components.rs  context.rs  filter.rs  lib.rs  navigation.rs  tests.rs  types.rs
crates/shell/: CLAUDE.md  Cargo.toml
crates/shell/examples/: admin.rs  basic.rs  cmdk_search.rs  mobile_native.rs  mobile_variants.rs  notes.rs  task_manager.rs  workspace.rs
crates/shell/src/: breakpoint.rs  context.rs  lib.rs  shell.rs  tests.rs
crates/suggest/: CLAUDE.md  Cargo.toml
crates/suggest/examples/noxpad/: Cargo.toml
crates/suggest/examples/suggest-demo/: Cargo.toml
crates/suggest/src/: components.rs  hook.rs  lib.rs  placement.rs  tests.rs  trigger.rs  types.rs
crates/tabs/: CLAUDE.md  Cargo.toml  DESIGN-SPEC.md
crates/tabs/src/: components.rs  lib.rs  tests.rs  types.rs
crates/tag-input/: CLAUDE.md  Cargo.toml  input.css
crates/tag-input/assets/: tailwind.css
crates/tag-input/examples/: advanced.rs  async_search.rs  basic.rs  compound.rs  controlled.rs  creatable.rs  demo.rs  form.rs  grouped.rs  popover.rs  showcase.rs  sortable.rs
crates/tag-input/src/: breakpoint.rs  combo.rs  hook.rs  lib.rs  tag.rs  tests.rs
crates/tag-input/src/components/: auto_complete.rs  control.rs  count.rs  dropdown.rs  dropdown_group.rs  form_value.rs  input.rs  live_region.rs  mod.rs  option.rs  root.rs  tag.rs  tag_list.rs  tag_popover.rs  tag_remove.rs
crates/time-picker/: Cargo.toml
crates/time-picker/src/: components.rs  context.rs  lib.rs  tests.rs
crates/timer/: Cargo.toml  README.md
crates/timer/src/: countdown.rs  format.rs  lib.rs  stopwatch.rs  tests.rs  time.rs  types.rs
crates/toast/: Cargo.toml  README.md
crates/toast/src/: components.rs  hook.rs  lib.rs  manager.rs  tests.rs  types.rs
(+73 files in other folders)
