[workspace]
members = [
    "crates/cmdk",
    "crates/virtualize",
    "crates/dnd",
    "crates/extensions",
    "crates/gestures",
    "crates/preview",
    "crates/shell",
    "crates/suggest",
    "crates/tag-input",
    "crates/markdown",
    "crates/dioxus-nox",
    "crates/cmdk/examples/command_palette",
    "crates/cmdk/examples/command_palette_adaptive",
    "crates/cmdk/examples/command_palette_floating",
    "crates/cmdk/examples/command_palette_mobile",
    "crates/cmdk/examples/command_palette_pages",
    "crates/noxpad",
    "crates/suggest/examples/suggest-demo",
    "crates/tabs",
    "crates/core",
    "crates/timer",
    "crates/modal",
    "crates/drawer",
    "crates/toast",
    "crates/master-detail",
    "crates/cycle",
    "crates/inline-confirm",
    "crates/toggle-group",
    "crates/password-strength",
    "crates/select",
]
resolver = "2"

[workspace.package]
version = "0.13.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/7A9599F5/dioxus-nox"

[workspace.dependencies]
dioxus = "=0.7.3"
dioxus-router = "=0.7.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
nucleo-matcher = "0.3"
keyboard-types = "0.7"
getrandom = "0.3"
tracing = "0.1"
dioxus-nox-virtualize = { path = "crates/virtualize", version = "0.13" }
dioxus-nox-dnd = { path = "crates/dnd", version = "0.13" }
dioxus-nox-cmdk = { path = "crates/cmdk", version = "0.13", default-features = false }
dioxus-nox-shell = { path = "crates/shell", version = "0.13" }
dioxus-nox-markdown = { path = "crates/markdown", version = "0.13" }
dioxus-nox-suggest = { path = "crates/suggest", version = "0.13" }
dioxus-nox-tag-input = { path = "crates/tag-input", version = "0.13" }
dioxus-nox-preview = { path = "crates/preview", version = "0.13" }
dioxus-nox-extensions = { path = "crates/extensions", version = "0.13" }
dioxus-nox-gestures = { path = "crates/gestures", version = "0.13" }
dioxus-nox-tabs = { path = "crates/tabs", version = "0.13" }
dioxus-nox-core = { path = "crates/core", version = "0.13" }
dioxus-nox-timer = { path = "crates/timer", version = "0.13" }
dioxus-nox-modal = { path = "crates/modal", version = "0.13" }
dioxus-nox-drawer = { path = "crates/drawer", version = "0.13" }
dioxus-nox-toast = { path = "crates/toast", version = "0.13" }
dioxus-nox-master-detail = { path = "crates/master-detail", version = "0.13" }
dioxus-nox-cycle = { path = "crates/cycle", version = "0.13" }
dioxus-nox-inline-confirm = { path = "crates/inline-confirm", version = "0.13" }
dioxus-nox-toggle-group = { path = "crates/toggle-group", version = "0.13" }
dioxus-nox-password-strength = { path = "crates/password-strength", version = "0.13" }
dioxus-nox-select = { path = "crates/select", version = "0.13" }
dioxus-nox = { path = "crates/dioxus-nox", version = "0.13" }
syntect = { version = "5.3", default-features = false }
uuid = "1"
