[package]
name = "dioxus-nox-collection"
description = "Shared collection primitives for scoring, navigation, and filtering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["collection", "scoring", "navigation", "fuzzy-search"]
categories = ["algorithms"]

[dependencies]
nucleo-matcher = { workspace = true }
