[package]
name = "dioxus-nox-core"
version.workspace = true
edition.workspace = true
description = "Core utilities for dioxus-nox — focus trap, scroll lock, and inert management"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "a11y", "focus-trap", "modal", "ui"]
categories = ["gui", "web-programming", "accessibility"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlBodyElement",
    "HtmlCollection",
    "HtmlElement",
    "NodeList",
    "CssStyleDeclaration",
] }
