[package]
name = "dioxus-nox-date-picker"
description = "Headless date picker, date range picker, and date field for Dioxus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["date-picker", "calendar", "headless", "dioxus"]
categories = ["gui"]

[features]
default = ["web"]
web = []
desktop = []
mobile = []

[dependencies]
dioxus = { workspace = true }
dioxus-nox-calendar = { path = "../calendar", version = "0.13" }
time = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
