[package]
name = "dioxus-nox-drawer"
version.workspace = true
edition.workspace = true
description = "Headless drawer/sheet primitive for Dioxus that slides from any edge"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "drawer", "sheet", "slide-over", "headless"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }
dioxus-nox-core = { workspace = true }
