[package]
name = "dioxus-nox-extensions"
version.workspace = true
edition.workspace = true
description = "Runtime plugin system for Dioxus applications"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "plugins", "extensions", "runtime", "wasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }
