[package]
name = "dioxus-nox-gestures"
version.workspace = true
edition.workspace = true
description = "Touch gesture primitives (swipe-left reveal, long-press) for Dioxus WASM apps"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "gestures", "swipe", "long-press", "wasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
gloo-timers = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "EventTarget",
    "PointerEvent",
] }
