[package]
name = "dioxus-nox-inline-confirm"
version.workspace = true
edition.workspace = true
description = "Headless inline confirmation pattern for Dioxus"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "confirm", "inline", "headless", "wasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }
