[package]
name = "dioxus-nox-markdown"
version = "0.1.0"
edition.workspace = true
description = "Headless markdown editor, previewer, and display components for Dioxus"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "markdown", "editor", "wasm"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
dioxus = { workspace = true }
comrak = { workspace = true }
gloo-timers = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
syntax-highlighting = []

[[example]]
name = "basic_editor"
path = "examples/basic_editor.rs"

[[example]]
name = "read_only"
path = "examples/read_only.rs"

[[example]]
name = "live_preview"
path = "examples/live_preview.rs"

[[example]]
name = "tailwind_styled"
path = "examples/tailwind_styled.rs"
