[package]
name = "dioxus-nox-markdown"
version = "0.1.0"
edition.workspace = true
description = "Headless markdown editor, previewer, and display components for Dioxus"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "markdown", "editor", "wasm"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
dioxus = { workspace = true }
gloo-timers = { workspace = true }
crop = "0.4.3"
pulldown-cmark = "0.13.1"
syntect = { workspace = true, features = ["default-fancy", "html"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
syntax-highlighting = ["dep:syntect"]

[[example]]
name = "basic_editor"
path = "examples/basic_editor.rs"

[[example]]
name = "read_only"
path = "examples/read_only.rs"

[[example]]
name = "live_preview"
path = "examples/live_preview.rs"

[[example]]
name = "tailwind_styled"
path = "examples/tailwind_styled.rs"

[[example]]
name = "inline_preview"
path = "examples/inline_preview.rs"

[dev-dependencies]
dioxus-ssr = "0.7.3"
