[package]
name = "noxpad"
version = "0.1.0"
edition.workspace = true

[dependencies]
dioxus            = { workspace = true, features = ["web"] }
dioxus-nox-shell  = { workspace = true }
dioxus-nox-markdown = { workspace = true, features = ["syntax-highlighting"] }
dioxus-nox-cmdk   = { workspace = true, features = ["web"] }
dioxus-nox-suggest = { workspace = true }
dioxus-nox-tag-input = { workspace = true }
dioxus-nox-dnd    = { workspace = true }
dioxus-nox-preview = { workspace = true }
dioxus-nox-gestures = { workspace = true }
