[package]
name = "dioxus-nox-preview"
version = "0.1.0"
edition.workspace = true
description = "Debounced preview hook and LRU cache for navigable Dioxus lists"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "preview", "command-palette", "debounce", "lru"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
dioxus = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }
