[package]
name = "dioxus-nox-select"
version.workspace = true
edition.workspace = true
description = "Headless Select / Combobox / Multiselect primitives for Dioxus"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "select", "combobox", "headless", "wasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }
nucleo-matcher = { workspace = true }
dioxus-nox-collection = { workspace = true }
