[package]
name = "dioxus-nox-tag-input"
version.workspace = true
edition.workspace = true
description = "Headless tag/multi-select input primitive for Dioxus"
license.workspace = true
repository.workspace = true
keywords = ["dioxus", "tag-input", "multi-select", "wasm"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "Element", "ScrollIntoViewOptions", "ScrollLogicalPosition", "ClipboardEvent", "DataTransfer"] }

[dev-dependencies]
dioxus-nox-dnd = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]

[[example]]
name = "demo"

[[example]]
name = "basic"

[[example]]
name = "form"

[[example]]
name = "popover"

[[example]]
name = "grouped"

[[example]]
name = "creatable"

[[example]]
name = "async_search"

[[example]]
name = "advanced"

[[example]]
name = "compound"

[[example]]
name = "controlled"

[[example]]
name = "sortable"

[[example]]
name = "showcase"
